add hyperlink to chevron

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               </p>
 
               <P>
-                During the Summer 2022, I will be working at Chevron as a Software Engineer Intern on the chapter team in San Ramon, CA.
+                During the Summer 2022, I will be working at <a href="https://www.chevron.com" >Chevron</a> as a Software Engineer Intern on the chapter team in San Ramon, CA.
               </P>
               <p>
                 I previously interned at <a href="https://www.americanexpress.com"> American Express</a>, where I worked as a Software Engineer working on building backend services. I also worked at <a href="https://www.knobull"> Knobull</a> building academic search engine. I also worked on my own startup <a href="https://github.com/3linic">3Linic </a>  a little under a year.
