made some uodate

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   <p style="color:darkblue; display:inline">Summer. '19 &emsp;</p>
               </td>
               <td>
-                  Joined <a href="https://www.americanexpress.com">American Express</a> as a Service Assurance Engineer Intern building backend services.
+                   Interned at <a href="https://www.americanexpress.com">American Express</a> building backend services.
               </td>
           </tr>
           </tbody>
@@ -188,7 +188,6 @@
             <td style="padding:0px">
               <p>Updated Jan 2022.</p>
               <p style="text-align:right;">
-                Design and source code forked from <a href="https://github.com/jonbarron/website" class="href">Jon Barron's website.</a>
               </p>
             </td>
           </tr>
