--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Francisco Noel</name>
               </p>
-              <p>I am Stem major at Florida International University</p>
+              <p>Computing @ Florida International University</p>
 
               <P>
                 During the Summer 2022, I will be working at <a href="https://www.chevron.com" >Chevron</a> as a Software Engineer Intern on the chapter team in San Ramon, CA.
