--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Francisco Noel</title>
-  <meta name="author" content="Francisco Noel">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Francisco Noel">
+  <meta name="description" content="Francisco Noel is a software engineer. He works to build performant backend systems, and infrastructure.">
+  
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="icon" type="image/png" href="images/profile.jpg">
+  <link rel="canonical" href="https://francisconoel.com/">  
+  
+  <title>Francisco Noel</title>
 </head>
 
 <body>
