--- a/index.html
+++ b/index.html
@@ -25,16 +25,17 @@
                 <name>Francisco Noel</name>
               </p>
               <p>Computing @ Florida International University</p>
+                
+                <p>I am a software engineer based in Miami, Florida. 
+                </p>
+              <p>
+              Previously, I worked at <a href="https://www.chevron.com"> Chevron  </a> in San Ramon, CA,  <a href="https://www.americanexpress.com"> American Express</a> in Sunrise, FL, <a href="https://www.knobull"> Knobull</a> in  Miami, FL (remotely), and  <a href="https://github.com/3linic">3Linic </a> in Miami, FL.
+              </p>
+              <p> My main interests are in distributed systems, algorithms design, and software architecture. Anyway, I tend to be passionate about everything around Systems.
+                </p>
 
-              <P>
-                During the Summer 2022, I will be working at <a href="https://www.chevron.com" >Chevron</a> as a Software Engineer Intern on the chapter team in San Ramon, CA.
-              </P>
-              <p>
-                I previously interned at <a href="https://www.americanexpress.com"> American Express</a>, where I worked as a Software Engineer working on building backend services. I also worked at <a href="https://www.knobull"> Knobull</a> building academic search engine. I also worked on my own startup <a href="https://github.com/3linic">3Linic </a>  a little under a year.
-              </p>
-              <p>
-                I'm passionate about solving critical challenges in software Engineering. I am personally interested in distributed systems, algorithmic design, and software architecture
-              </p>
+                <p>Since I was a teenager, I like programmming. I plan to stay an individual contributor for a long time.</p>
+
               <p style="text-align:center">
                 <a href="mailto:fnoel012@fiu.edu">Email</a> &nbsp/&nbsp
                 <a href="https://github.com/byfnoel/">Github</a> &nbsp/&nbsp
@@ -64,7 +65,7 @@
                   <p style="color:darkblue; display:inline">Summer '22 &emsp;</p>
               </td>
               <td>
-                  Software Engineer Intern at  <a href="https://chevron.com">Chevron</a>.
+                  Software Engineering Internship at  <a href="https://chevron.com">Chevron</a>.
               </td>
           </tr>
           <!-- ITEM -->
@@ -73,7 +74,7 @@
                 <p style="color:darkblue; display:inline">Dec. '21 &emsp;</p>
             </td>
             <td>
-                Launched my startup <a href="https://github.com/3linic">3Linic</a> working as sole founder and Software Engineer.
+                Launched my startup <a href="https://github.com/3linic">3Linic</a>.
             </td>
         </tr>
           <!-- ITEM -->
@@ -82,7 +83,7 @@
             <p style="color:darkblue; display:inline">Summer. '20 &emsp;</p>
         </td>
         <td>
-            Software Engineer Intern at a startup <a href="https://wwww.knobullcom">Knobull</a>.
+            Software Engineering Internship at <a href="https://wwww.knobullcom">Knobull</a>.
         </td>
           <!-- ITEM -->
           <tr>
@@ -90,114 +91,11 @@
                   <p style="color:darkblue; display:inline">Summer. '19 &emsp;</p>
               </td>
               <td>
-                   Interned at <a href="https://www.americanexpress.com">American Express</a> building backend services.
+                   Software Engineering Internship at <a href="https://www.americanexpress.com">American Express</a>.
               </td>
           </tr>
           </tbody>
         </table>
 
-        <!-- Publications -->
-        <hr>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-
-        </tbody></table>
-        <!-- <hr> -->
-        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
-          <tr>
-            <td>
-              <heading>Projects</heading>
-            </td>
-          </tr>
-        </tbody></table>
-        <table border=0 class="bg_colour" style="padding:10px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <!-- ITEM -->
-          <tr>
-              <td style="padding:10px;width:25%;vertical-align:middle">
-                  <div class="one">
-                      <img src='images/sorting-algo-visualizer.png' width="150">
-                  </div>
-              </td>
-              <td style="padding:10px;width:75%;vertical-align:top">
-                  <papertitle><big>Sorting Visualizer</papertitle></big>
-                  <br>
-                  Visualize common sorting algorithms <a href="https://www.github.com/byfnoel/sorting-visualizer">Source Code</a>
-                  <ul style="padding-left: 20px;">
-                    <li style="padding-bottom: 5px;">
-                      Used modern MERN stack to build the project.
-                    </li>
-                  </ul>
-              </td>
-          </tr>
-          <!-- ITEM -->
-          <tr>
-              <td style="padding:10px;width:25%;vertical-align:middle">
-                  <div class="one">
-                      <img src='images/creditcard-validator.jpg' width="150">
-                  </div>
-              </td>
-              <td style="padding:10px;width:75%;vertical-align:top">
-                  <papertitle><big>Credit Card Validator</papertitle></big>
-                  <br>
-                  Authenticate credit card information<a href="https://github.com/byfnoel/credit-card-validator"> Source Code</a>
-                  <ul style="padding-left: 20px;">
-                    <li style="padding-bottom: 5px;">
-                      Used C++ and followed OOD principles.
-                    </li>
-
-                  </ul>
-              </td>
-          </tr>
-          <!-- ITEM -->
-          <tr>
-            <td style="padding:10px;width:25%;vertical-align:middle">
-                <div class="one">
-                    <img src='images/caesar-cipher.jpg' width="150">
-                </div>
-            </td>
-            <td style="padding:10px;width:75%;vertical-align:top">
-                <papertitle><big>Caesar Cipher</papertitle></big>
-                <br>
-                Text encryption <a href="https://github.com/byfnoel/caesar-cipher/" class="href">Source Code</a>
-                <ul style="padding-left: 20px;">
-                  <li style="padding-bottom: 5px;">
-                    Fun C++ Program that will encrypt and decrypt string messages
-                  </li>
-                </ul>
-            </td>
-        </tr>
-
-        <!--ITEM-->
-        <tr>
-          <td style="padding:10px;width:25%;vertical-align:middle">
-              <div class="one">
-                  <img src='images/blackjack.jpg' width="150">
-              </div>
-          </td>
-          <td style="padding:10px;width:75%;vertical-align:top">
-              <papertitle><big>Blackjack Game</papertitle></big>
-              <br>
-              Python Game<a href="https://github.com/byfnoel/blackjack-game"> Source Code</a>
-              <ul style="padding-left: 20px;">
-                <li style="padding-bottom: 5px;">
-                  Recreate the popular card game in python
-                </li>
-
-              </ul>
-          </td>
-      </tr>
-      </tbody></table>
-        <hr>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr>
-            <td style="padding:0px">
-              <p>Updated Jan 2022.</p>
-              <p style="text-align:right;">
-              </p>
-            </td>
-          </tr>
-        </tbody></table>
-      </td>
-    </tr>
-  </table>
 </body>
 </html>
