--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <meta name="description" content="Francisco Noel is a software engineer. He works to build performant backend systems, and infrastructure.">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <link rel="icon" type="image/png" href="images/profile.jpg">
+  <link rel="icon" type="image/png" href="images/IMG_0154.png">
   <link rel="canonical" href="https://francisconoel.com/">  
   
-  <title>Francisco Noel</title>
+  <title>Francisco Noel - Home Page</title>
 </head>
 
 <body>
@@ -31,10 +31,10 @@
               <p>
               Previously, I worked at <a href="https://www.chevron.com"> Chevron  </a> in San Ramon, CA,  <a href="https://www.americanexpress.com"> American Express</a> in Sunrise, FL, <a href="https://www.knobull"> Knobull</a> in  Miami, FL (remotely), and  <a href="https://github.com/3linic">3Linic </a> in Miami, FL.
               </p>
-              <p> My main interests are in distributed systems, algorithms design, and software architecture. Anyway, I tend to be passionate about everything around Systems.
+              <p> My main interests are in distributed systems, algorithms design, and software architecture. Anyway, I tend to be passionate about problems related to <u>systems</u>.
                 </p>
 
-                <p>Since I was a teenager, I like programmming. I plan to stay an individual contributor for a long time.</p>
+                <p>My passion for software engineering lies between the intersection of crafmanship and quality-oriented toolings for systems.</p>
 
               <p style="text-align:center">
                 <a href="mailto:fnoel012@fiu.edu">Email</a> &nbsp/&nbsp
@@ -43,7 +43,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/profile_picture.JPG"><img style="width:100%;max-width:100%" alt="profile photo" src="images/profile_picture.JPG" class="hoverZoomLink"></a>
+              <a href="images/profile_picture.JPG"><img style="width:100%;max-width:100%" alt="profile photo" src="images/IMG_0154.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -74,7 +74,7 @@
                 <p style="color:darkblue; display:inline">Dec. '21 &emsp;</p>
             </td>
             <td>
-                Launched my startup <a href="https://github.com/3linic">3Linic</a>.
+                Startup founder at <a href="https://github.com/3linic">3Linic</a>.
             </td>
         </tr>
           <!-- ITEM -->
