Add summer '23 internship
This commit updates the list of my internships. My summer '23 internship
at Chevron was missing.'

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Francisco Noel">
-  <meta name="description" content="Francisco Noel is a software engineer. He works to build performant backend systems, and infrastructure.">
+  <meta name="description" content="Francisco Noel is a software engineer. 
+  He works to build performant backend systems, and infrastructure.">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="icon" type="image/png" href="images/IMG_0154.png">
@@ -39,7 +40,7 @@
               <p style="text-align:center">
                 <a href="mailto:fnoel012@fiu.edu">Email</a> &nbsp/&nbsp
                 <a href="https://github.com/byfnoel/">Github</a> &nbsp/&nbsp
-                <a href="https://linkedin.com/in/francisconoel/">LinkedIn</a> &nbsp/&nbsp
+                <a href="https://linkedin.com/in/francisconoel/">LinkedIn</a> &nbsp
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
@@ -60,6 +61,16 @@
         </tbody></table>
         <table style="padding:10px;width:100%;border:0px;border-spacing:3px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <!-- ITEM -->
+         <tr>
+              <td>
+                  <p style="color:darkblue; display:inline">Summer '23 &emsp;</p>
+              </td>
+              <td>
+                  Software Engineering Internship at  <a href="https://chevron.com">Chevron</a>.
+              </td>
+          </tr>
+   
+
           <tr>
               <td>
                   <p style="color:darkblue; display:inline">Summer '22 &emsp;</p>
