Clean up my webpage

--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Francisco Noel">
-  <meta name="description" content="Francisco Noel is a software engineer. 
-  He works to build performant backend systems, and infrastructure.">
-  
+  <meta name="description" content="Francisco Noel is a software engineer. He works to build performant backend systems.">
+
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="icon" type="image/png" href="images/IMG_0154.png">
-  <link rel="canonical" href="https://francisconoel.com/">  
-  
-  <title>Francisco Noel - Home Page</title>
+  <link rel="canonical" href="https://francisconoel.com/">
+
+  <title>About | Francisco Noel</title>
 </head>
 
 <body>
@@ -25,42 +24,39 @@
               <p style="text-align:center">
                 <name>Francisco Noel</name>
               </p>
-              <p>Computing @ Florida International University</p>
-                
-                <p>I am a software engineer based in Miami, Florida. 
-                </p>
-              <p>
-              Previously, I worked at <a href="https://www.chevron.com"> Chevron  </a> in San Ramon, CA,  <a href="https://www.americanexpress.com"> American Express</a> in Sunrise, FL, <a href="https://www.knobull"> Knobull</a> in  Miami, FL (remotely), and  <a href="https://github.com/3linic">3Linic </a> in Miami, FL.
+                <p> Hi! My name is Francisco, a final-year undergraduate student from the school of computing and
+                information sciences at Florida International University.</p>
+                <p>My interests are broadly in systems programming, distributed systems, infrastructure, algorithms,
+                networking, and software architecture</p>
+                <p> I previously worked at <a href="https://www.chevron.com"> Chevron  </a> in San Ramon, CA,
+                <a href="https://www.americanexpress.com"> American Express</a> in Sunrise, FL,
+                <a href="https://www.knobull"> Knobull</a> in  Miami, FL (remotely), and
+                <a href="https://github.com/3linic">3Linic </a> in Miami, FL.
               </p>
-              <p> My main interests are in distributed systems, algorithms design, and software architecture. Anyway, I tend to be passionate about problems related to <u>systems</u>.
-                </p>
-
-                <p>My passion for software engineering lies between the intersection of crafmanship and quality-oriented toolings for systems.</p>
 
               <p style="text-align:center">
-                <a href="mailto:fnoel012@fiu.edu">Email</a> &nbsp/&nbsp
+              <p style="display: inline;"> Email: byfnoel [at] gmail [dot] com </p> &nbsp/&nbsp
                 <a href="https://github.com/byfnoel/">Github</a> &nbsp/&nbsp
                 <a href="https://linkedin.com/in/francisconoel/">LinkedIn</a> &nbsp
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/profile_picture.JPG"><img style="width:100%;max-width:100%" alt="profile photo" src="images/IMG_0154.png" class="hoverZoomLink"></a>
+              <a href="images/profile_picture.JPG"><img style="width:100%;max-width:100%" alt="profile photo"
+                  src="images/IMG_0154.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
-
 
         <!-- News -->
         <hr>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:10px;width:100%;vertical-align:middle">
-              <heading>News</heading>
+              <heading>Employment History</heading>
             </td>
           </tr>
         </tbody></table>
         <table style="padding:10px;width:100%;border:0px;border-spacing:3px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <!-- ITEM -->
          <tr>
               <td>
                   <p style="color:darkblue; display:inline">Summer '23 &emsp;</p>
@@ -69,44 +65,27 @@
                   Software Engineering Internship at  <a href="https://chevron.com">Chevron</a>.
               </td>
           </tr>
-   
 
           <tr>
-              <td>
-                  <p style="color:darkblue; display:inline">Summer '22 &emsp;</p>
-              </td>
-              <td>
-                  Software Engineering Internship at  <a href="https://chevron.com">Chevron</a>.
-              </td>
+              <td><p style="color:darkblue; display:inline">Summer '22 &emsp;</p></td>
+              <td>Software Engineering Internship at  <a href="https://chevron.com">Chevron</a></td>
           </tr>
-          <!-- ITEM -->
-          <tr>
-            <td>
-                <p style="color:darkblue; display:inline">Dec. '21 &emsp;</p>
-            </td>
-            <td>
-                Startup founder at <a href="https://github.com/3linic">3Linic</a>.
-            </td>
-        </tr>
-          <!-- ITEM -->
 
-          <td>
-            <p style="color:darkblue; display:inline">Summer. '20 &emsp;</p>
-        </td>
-        <td>
-            Software Engineering Internship at <a href="https://wwww.knobullcom">Knobull</a>.
-        </td>
-          <!-- ITEM -->
           <tr>
-              <td>
-                  <p style="color:darkblue; display:inline">Summer. '19 &emsp;</p>
-              </td>
-              <td>
-                   Software Engineering Internship at <a href="https://www.americanexpress.com">American Express</a>.
-              </td>
+            <td>
+                <p style="color:darkblue; display:inline">Dec. '20 to Sep. '21 &emsp;</p>
+            </td>
+            <td>Software Engineering at <a href="https://github.com/3linic">3Linic</a></td>
+
+        </tr>
+          <td><p style="color:darkblue; display:inline">Fall '20 &emsp;</p></td>
+        <td>Software Engineering Internship at <a href="https://wwww.knobullcom">Knobull</a></td>
+
+          <tr>
+              <td><p style="color:darkblue; display:inline">Summer '19 &emsp;</p></td>
+              <td>Software Engineering Internship at <a href="https://www.americanexpress.com">American Express</a></td>
           </tr>
           </tbody>
         </table>
-
 </body>
 </html>
