Fix broken links
This patch fixes many broken links in the website

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 networking, and software architecture</p>
                 <p> I previously worked at <a href="https://www.chevron.com"> Chevron  </a> in San Ramon, CA,
                 <a href="https://www.americanexpress.com"> American Express</a> in Sunrise, FL,
-                <a href="https://www.knobull"> Knobull</a> in  Miami, FL (remotely), and
+                <a href="https://www.knobull.com"> Knobull</a> in  Miami, FL (remotely), and
                 <a href="https://github.com/3linic">3Linic </a> in Miami, FL.
               </p>
 
@@ -79,7 +79,7 @@
 
         </tr>
           <td><p style="color:darkblue; display:inline">Fall '20 &emsp;</p></td>
-        <td>Software Engineering Internship at <a href="https://wwww.knobullcom">Knobull</a></td>
+        <td>Software Engineering Internship at <a href="https://wwww.knobull.com">Knobull</a></td>
 
           <tr>
               <td><p style="color:darkblue; display:inline">Summer '19 &emsp;</p></td>
