Fix broken links

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
                 information sciences at Florida International University.</p>
                 <p>My interests are broadly in systems programming, distributed systems, infrastructure, algorithms,
                 networking, and software architecture</p>
-                <p> I previously worked at <a href="https://chevron.com"> Chevron  </a> in San Ramon, CA,
-                <a href="https://americanexpress.com"> American Express</a> in Sunrise, FL,
-                <a href="https://knobull.com"> Knobull</a> in  Miami, FL (remotely), and
-                <a href="https://github.com/3linic">3Linic </a> in Miami, FL.
+                <p> I previously worked at <a href="https://www.chevron.com"> Chevron  </a> in San Ramon, CA,
+                <a href="https://www.americanexpress.com"> American Express</a> in Sunrise, FL,
+                <a href="https://www.knobull.com"> Knobull</a> in  Miami, FL (remotely), and
+                <a href="https://www.github.com/3linic">3Linic </a> in Miami, FL.
               </p>
 
               <p style="text-align:center">
               <p style="display: inline;"> Email: byfnoel [at] gmail [dot] com </p> &nbsp/&nbsp
-                <a href="https://github.com/byfnoel/">Github</a> &nbsp/&nbsp
-                <a href="https://linkedin.com/in/francisconoel/">LinkedIn</a> &nbsp
+                <a href="https://www.github.com/byfnoel/">Github</a> &nbsp/&nbsp
+                <a href="https://www.linkedin.com/in/francisconoel/">LinkedIn</a> &nbsp
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
@@ -62,28 +62,28 @@
                   <p style="color:darkblue; display:inline">Summer '23 &emsp;</p>
               </td>
               <td>
-                  Software Engineering Internship at  <a href="https://chevron.com">Chevron</a>.
+                  Software Engineering Internship at  <a href="https://www.chevron.com">Chevron</a>.
               </td>
           </tr>
 
           <tr>
               <td><p style="color:darkblue; display:inline">Summer '22 &emsp;</p></td>
-              <td>Software Engineering Internship at  <a href="https://chevron.com">Chevron</a></td>
+              <td>Software Engineering Internship at  <a href="https://www.chevron.com">Chevron</a></td>
           </tr>
 
           <tr>
             <td>
                 <p style="color:darkblue; display:inline">Dec. '20 to Sep. '21 &emsp;</p>
             </td>
-            <td>Software Engineering at <a href="https://github.com/3linic">3Linic</a></td>
+            <td>Software Engineering at <a href="https://www.github.com/3linic">3Linic</a></td>
 
         </tr>
           <td><p style="color:darkblue; display:inline">Fall '20 &emsp;</p></td>
-        <td>Software Engineering Internship at <a href="https://knobull.com">Knobull</a></td>
+        <td>Software Engineering Internship at <a href="https://www.knobull.com">Knobull</a></td>
 
           <tr>
               <td><p style="color:darkblue; display:inline">Summer '19 &emsp;</p></td>
-              <td>Software Engineering Internship at <a href="https:/americanexpress.com">American Express</a></td>
+              <td>Software Engineering Internship at <a href="https://www.americanexpress.com">American Express</a></td>
           </tr>
           </tbody>
         </table>
