Change the profile border

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/profile_picture.JPG"><img style="width:100%;max-width:100%" alt="profile photo"
+              <a href="images/profile_picture.JPG"><img style="width:100%;max-width:100%;border-radius:50%" alt="profile photo"
                   src="images/IMG_0154.png" class="hoverZoomLink"></a>
             </td>
           </tr>
