--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p> Hi! My name is Francisco, a final-year undergraduate student from the school of computing and
                 information sciences at Florida International University.</p>
                 <p>My interests are broadly in systems programming, distributed systems, infrastructure, algorithms,
-                networking, and software architecture</p>
+                networking, and software architecture.</p>
                 <p> I previously worked at <a href="https://www.chevron.com"> Chevron  </a> in San Ramon, CA,
                 <a href="https://www.americanexpress.com"> American Express</a> in Sunrise, FL,
                 <a href="https://www.knobull.com"> Knobull</a> in  Miami, FL (remotely), and
