Most recent and updated website

--- a/index.html
+++ b/index.html
@@ -6,86 +6,72 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Francisco Noel">
   <meta name="description" content="Francisco Noel is a software engineer. He works to build performant backend systems.">
-
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <link rel="icon" type="image/png" href="images/IMG_0154.png">
+  <link rel="icon" type="image/png" href="images/profile.jpg">
   <link rel="canonical" href="https://francisconoel.com/">
-
-  <title>About | Francisco Noel</title>
+  <title>Francisco Noel</title>
 </head>
 
 <body>
-  <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-    <tr style="padding:0px">
-      <td style="padding:0px">
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr style="padding:0px">
-            <td style="padding:2.5%;width:63%;vertical-align:middle">
-              <p style="text-align:center">
-                <name>Francisco Noel</name>
-              </p>
-                <p> Hi! My name is Francisco, a final-year undergraduate student from the school of computing and
-                information sciences at Florida International University.</p>
-                <p>My interests are broadly in systems programming, distributed systems, infrastructure, algorithms,
-                networking, and software architecture.</p>
-                <p> I previously worked at <a href="https://www.chevron.com"> Chevron  </a> in San Ramon, CA,
-                <a href="https://www.americanexpress.com"> American Express</a> in Sunrise, FL,
-                <a href="https://www.knobull.com"> Knobull</a> in  Miami, FL (remotely), and
-                <a href="https://www.github.com/3linic">3Linic </a> in Miami, FL.
-              </p>
 
-              <p style="text-align:center">
-              <p style="display: inline;"> Email: byfnoel [at] gmail [dot] com </p> &nbsp/&nbsp
-                <a href="https://www.github.com/byfnoel/">Github</a> &nbsp/&nbsp
-                <a href="https://www.linkedin.com/in/francisconoel/">LinkedIn</a> &nbsp
-              </p>
-            </td>
-            <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/profile_picture.JPG"><img style="width:100%;max-width:100%;border-radius:50%" alt="profile photo"
-                  src="images/IMG_0154.png" class="hoverZoomLink"></a>
-            </td>
-          </tr>
-        </tbody></table>
+    <header>
+        <div class="header-content">
+            <div class="name-title">
+                <h1>Francisco Noel</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="https://www.linkedin.com/in/francisconoel">Experience</a></li>
+                    <li><a href="https://www.github.com/byfnoel">Projects</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-        <!-- News -->
-        <hr>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-            <tr>
-            <td style="padding:10px;width:100%;vertical-align:middle">
-              <heading>Employment History</heading>
-            </td>
-          </tr>
-        </tbody></table>
-        <table style="padding:10px;width:100%;border:0px;border-spacing:3px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-         <tr>
-              <td>
-                  <p style="color:darkblue; display:inline">Summer '23 &emsp;</p>
-              </td>
-              <td>
-                  Software Engineering Internship at  <a href="https://www.chevron.com">Chevron</a>.
-              </td>
-          </tr>
 
-          <tr>
-              <td><p style="color:darkblue; display:inline">Summer '22 &emsp;</p></td>
-              <td>Software Engineering Internship at  <a href="https://www.chevron.com">Chevron</a></td>
-          </tr>
+    <main>
+        <section id="about">
+        <img src="images/IMG_0154.png" alt="Francisco Noel" class="profile-picture">
+              <div class="about-content">
+                    <p> Hi. My name is Francisco Noel and I'm a <a href="https://www.github.com/byfnoel"> software engineer</a>. </p>
+                    <p>I attended the school of computing and information sciences at Florida International University studying Information Technology.
+                    </p>
 
-          <tr>
-            <td>
-                <p style="color:darkblue; display:inline">Dec. '20 to Sep. '21 &emsp;</p>
-            </td>
-            <td>Software Engineering at <a href="https://www.github.com/3linic">3Linic</a></td>
+                    <p>I worked at a number of different companies, both large and small, such as Chevron, American Express and couple other small companies.
 
-        </tr>
-          <td><p style="color:darkblue; display:inline">Fall '20 &emsp;</p></td>
-        <td>Software Engineering Internship at <a href="https://www.knobull.com">Knobull</a></td>
+                    <p>
+                        Generally,  I am interested in systems problems, and I primarily code in Python/Rust/Java to solve those problems. 
+                    </p>
+                    <p>
+                        I enjoy working on projects related to infrastructure, build systems, platform engineering, devops pipelines, developer tooling and backend systems. 
+                    </p>
 
-          <tr>
-              <td><p style="color:darkblue; display:inline">Summer '19 &emsp;</p></td>
-              <td>Software Engineering Internship at <a href="https://www.americanexpress.com">American Express</a></td>
-          </tr>
-          </tbody>
-        </table>
-</body>
+                </div>
+      </section>
+
+        <section id="experience">
+            <h3>Employment History</h3>
+            <ul>
+                <li>Summer '23: Software Engineering Internship at <a href="https://www.chevron.com">Chevron</a></li>
+                <li>Summer '22: Software Engineering Internship at <a href="https://www.chevron.com">Chevron</a></li>
+                <li>Dec. '20 to Sep. '21: Software Engineering at <a href="https://www.github.com/3linic">3Linic</a></li>
+                <li>Fall '20: Software Engineering Internship at <a href="https://www.knobull.com">Knobull</a></li>
+                <li>Summer '19: Software Engineering Internship at <a href="https://www.americanexpress.com">American Express</a></li>
+            </ul>
+        </section>
+
+
+        <h3> Socials </h3>
+        <section id="contact">
+            <p>Email: byfnoel [at] gmail [dot] com</p>
+            <p>
+                    <a href="https://www.github.com/byfnoel/">GitHub</a> / 
+                    <a href="https://www.linkedin.com/in/francisconoel/">LinkedIn</a> / 
+                    <a href="https://www.x.com/byfnoel/"> Twitter/X</a> /
+                    <a href="https://www.youtube.com/@francisconoel/"> YouTube</a>
+            </p>
+        </section>
+    </main>
+  </body>
 </html>
