Update the website

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="author" content="Francisco Noel">
-  <meta name="description" content="Francisco Noel is a software engineer. He works to build performant backend systems.">
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <link rel="icon" type="image/png" href="images/profile.jpg">
-  <link rel="canonical" href="https://francisconoel.com/">
-  <title>Francisco Noel</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Francisco Noel">
+    <meta name="description"
+        content="Francisco Noel is a software engineer. He works to build performant backend systems.">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="icon" type="image/png" href="images/profile.jpg">
+    <link rel="canonical" href="https://francisconoel.com/">
+    <title>Francisco Noel</title>
 </head>
 
 <body>
@@ -32,32 +33,47 @@
 
     <main>
         <section id="about">
-        <img src="images/IMG_0154.png" alt="Francisco Noel" class="profile-picture">
-              <div class="about-content">
-                    <p> Hi. My name is Francisco Noel and I'm a <a href="https://www.github.com/byfnoel"> software engineer</a>. </p>
-                    <p>I attended the school of computing and information sciences at Florida International University studying Information Technology.
-                    </p>
+            <img src="images/IMG_0154.png" alt="Francisco Noel" class="profile-picture">
+            <div class="about-content">
+                <p> Hi there 👋! My name is Francisco Noel, and I am a <a href="https://www.github.com/byfnoel">
+                        software
+                        engineer</a> based in Miami, FL, USA. </p>
 
-                    <p>I worked at a number of different companies, both large and small, such as Chevron, American Express and couple other small companies.
-
-                    <p>
-                        Generally,  I am interested in systems problems, and I primarily code in Python/Rust/Java to solve those problems. 
-                    </p>
-                    <p>
-                        I enjoy working on projects related to infrastructure, build systems, platform engineering, devops pipelines, developer tooling and backend systems. 
-                    </p>
-
-                </div>
-      </section>
+                <p> I am passionate about building software systems that are fast, secure, and reliable.
+                </p>
+                <p>
+                    I have extensive experience in backend and infrastructure systems where performance and reliability
+                    are paramount. My interests include systems programming, distributed systems, platform engineering,
+                    and
+                    developer tools.
+                <p>
+                    Previously, I've worked at various companies, both large and small, such as <a
+                        href='https://www.americanexpress.com'> American
+                        Express</a> and <a href="https://www.chevron.com"> Chevron</a>.
+                </p>
+                <p> For a period of time, I attended the School of Computing and Information Sciences at <a
+                        href='https://www.cis.fiu.edu'> Florida International University </a> where I studied
+                    Information Technology.
+                </p>
+                <p> I primarily code in C/C++, Rust, or Python.
+                </p>
+                <p>
+                    When I am not programming, you can find me enjoying a cup of coffee, lifting weights, or taking a
+                    walk.
+                </p>
+            </div>
+        </section>
 
         <section id="experience">
             <h3>Employment History</h3>
             <ul>
                 <li>Summer '23: Software Engineering Internship at <a href="https://www.chevron.com">Chevron</a></li>
                 <li>Summer '22: Software Engineering Internship at <a href="https://www.chevron.com">Chevron</a></li>
-                <li>Dec. '20 to Sep. '21: Software Engineering at <a href="https://www.github.com/3linic">3Linic</a></li>
+                <li>Dec. '20 to Sep. '21: Software Engineering at <a href="https://www.github.com/3linic">3Linic</a>
+                </li>
                 <li>Fall '20: Software Engineering Internship at <a href="https://www.knobull.com">Knobull</a></li>
-                <li>Summer '19: Software Engineering Internship at <a href="https://www.americanexpress.com">American Express</a></li>
+                <li>Summer '19: Software Engineering Internship at <a href="https://www.americanexpress.com">American
+                        Express</a></li>
             </ul>
         </section>
 
@@ -66,12 +82,13 @@
         <section id="contact">
             <p>Email: byfnoel [at] gmail [dot] com</p>
             <p>
-                    <a href="https://www.github.com/byfnoel/">GitHub</a> / 
-                    <a href="https://www.linkedin.com/in/francisconoel/">LinkedIn</a> / 
-                    <a href="https://www.x.com/byfnoel/"> Twitter/X</a> /
-                    <a href="https://www.youtube.com/@francisconoel/"> YouTube</a>
+                <a href="https://www.github.com/byfnoel/">GitHub</a> /
+                <a href="https://www.linkedin.com/in/francisconoel/">LinkedIn</a> /
+                <a href="https://www.x.com/byfnoel/"> Twitter/X</a> /
+                <a href="https://www.youtube.com/@francisconoel/"> YouTube</a>
             </p>
         </section>
     </main>
-  </body>
+</body>
+
 </html>
