Add social media icons in social section

--- a/index.html
+++ b/index.html
@@ -77,15 +77,14 @@
             </ul>
         </section>
 
-
-        <h3> Socials </h3>
+        <h3>Social</h3>
         <section id="contact">
             <p>Email: byfnoel [at] gmail [dot] com</p>
             <p>
-                <a href="https://www.github.com/byfnoel/">GitHub</a> /
-                <a href="https://www.linkedin.com/in/francisconoel/">LinkedIn</a> /
-                <a href="https://www.x.com/byfnoel/"> Twitter/X</a> /
-                <a href="https://www.youtube.com/@francisconoel/"> YouTube</a>
+                <a href="https://www.github.com/byfnoel/" title="GitHub"><i class="fab fa-github"></i> @byfnoel</a> /
+                <a href="https://www.linkedin.com/in/francisconoel/" title="LinkedIn"><i class="fab fa-linkedin"></i> @francisconoel</a> /
+                <a href="https://www.x.com/byfnoel/" title="X (Twitter)"><i class="fab fa-twitter"></i> @byfnoel</a> /
+                <a href="https://www.youtube.com/@francisconoel/" title="YouTube"><i class="fab fa-youtube"></i> @francisconoel</a>
             </p>
         </section>
     </main>
