Remove unused code

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Francisco Noel">
     <meta name="description"
-        content="Francisco Noel - Software Engineer based in Miami, FL. Specializing in backend systems, systems programming, distributed systems, and platform engineering. Experience at Chevron, American Express, and 3Linic.">
+        content="Francisco Noel - Software Engineer based in Miami, FL. Specializing in backend systems, systems programming, distributed systems, and platform engineering. Experience at Chevron, American Express, etc...">
     <meta name="keywords" content="Francisco Noel, software engineer, backend systems, systems programming, distributed systems, platform engineering, Miami, Florida, C++, Rust, Python, Chevron, American Express">
     <meta name="robots" content="index, follow">
     
@@ -14,21 +14,21 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://francisconoel.com/">
     <meta property="og:title" content="Francisco Noel - Software Engineer">
-    <meta property="og:description" content="Francisco Noel - Software Engineer based in Miami, FL. Specializing in backend systems, systems programming, distributed systems, and platform engineering.">
+    <meta property="og:description" content="Francisco Noel - Software Engineer based in Miami, FL. Specializing in backend systems, systems programming, distributed systems, and platform engineering. Experience at Chevron, American Express, etc...">
     <meta property="og:image" content="https://francisconoel.com/images/profile.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://francisconoel.com/">
     <meta property="twitter:title" content="Francisco Noel - Software Engineer">
-    <meta property="twitter:description" content="Francisco Noel - Software Engineer based in Miami, FL. Specializing in backend systems, systems programming, distributed systems, and platform engineering.">
+    <meta property="twitter:description" content="Francisco Noel - Software Engineer based in Miami, FL. Specializing in backend systems, systems programming, distributed systems, and platform engineering. Experience at Chevron, American Express, etc...">
     <meta property="twitter:image" content="https://francisconoel.com/images/profile.jpg">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="icon" type="image/png" href="images/profile.jpg">
     <link rel="canonical" href="https://francisconoel.com/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
-    <!-- Structured Data for SEO -->
+    <!-- Structured Data -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
