--- a/blog.html
+++ b/blog.html
@@ -1,42 +1,45 @@
 <!DOCTYPE HTML>
 <html lang="en">
-  <head>
+
+<head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Francisco Noel">
-    <meta name="description" content="Francisco Noel's blog - Thoughts on software engineering, systems programming, and technology.">
+    <meta name="description"
+        content="Francisco Noel's blog - Thoughts on software engineering, systems programming, and technology.">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="icon" type="image/png" href="images/profile.jpg">
     <link rel="canonical" href="https://francisconoel.com/blog">
     <title>Blog - Francisco Noel</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
-      <div class="header-content">
-        <div class="name-title">
-          <h1><a href="index.html">Francisco Noel</a></h1>
+        <div class="header-content">
+            <div class="name-title">
+                <h1><a href="index.html">Francisco Noel</a></h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html#about">About</a></li>
+                    <li><a href="https://www.linkedin.com/in/francisconoel">Experience</a></li>
+                    <li><a href="https://www.github.com/byfnoel">Projects</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-          <ul>
-            <li><a href="index.html#about">About</a></li>
-            <li><a href="https://www.linkedin.com/in/francisconoel">Experience</a></li>
-            <li><a href="https://www.github.com/byfnoel">Projects</a></li>
-            <li><a href="blog.html">Blog</a></li>
-          </ul>
-        </nav>
-      </div>
     </header>
     <main>
-      <section id="blog">
-        <h2>Blog</h2>
-        <p>Thoughts on software engineering, systems programming, and technology.</p>
-        <div id="blog-posts">
-          <p>Loading blog posts...</p>
-        </div>
-      </section>
+        <section id="blog">
+            <h2>Blog</h2>
+            <p>Thoughts on software engineering, systems programming, and technology.</p>
+            <div id="blog-posts">
+                <p>Loading blog posts...</p>
+            </div>
+        </section>
     </main>
     <script>
-      // Fetch blog posts from GitHub repository posts directory
+        // Fetch blog posts from GitHub repository posts directory
         async function fetchBlogPosts() {
             const blogContainer = document.getElementById('blog-posts');
 
@@ -94,5 +97,6 @@
 
         document.addEventListener('DOMContentLoaded', fetchBlogPosts);
     </script>
-  </body>
+</body>
+
 </html>
